// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: FormAuthMethod completed form edit mode disabled user_oidc app should show disabled error message and disabled sso button when oauth2 is selected 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method" iscomplete="true"></formheading-stub>
  <!---->
  <div class="auth-method">
    <div>
      <div class="auth-method--hint">
        <p class="title">
          Need help setting this up?
        </p>
        <p class="description">Please read our guide on {htmlLink}.</p>
      </div>
      <div class="auth-method--options">
        <nccheckboxradioswitch-stub id="oauth-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oauth2" value="oauth2" class="radio-check">
          Two-way OAuth 2.0 authorization code flow
        </nccheckboxradioswitch-stub>
        <nccheckboxradioswitch-stub id="sso-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oauth2" value="oidc" disabled="true" class="radio-check">
          Single-Sign-On through OpenID Connect Identity Provider
        </nccheckboxradioswitch-stub>
        <div class="info-container">
          <p>
            Requires an active Enterprise Corporate plan in OpenProject.
          </p>
          <errorlabel-stub error="This feature requires version {version} (or higher) of &quot;{app}&quot; app. Please install or update the app." disabled="true"></errorlabel-stub>
        </div>
      </div>
    </div>
    <div class="form-actions">
      <!---->
      <ncbutton-stub alignment="center" size="normal" type="secondary" nativetype="button" target="_self" variant="secondary" data-test-id="cancel-auth-method-edit" class="mr-2">
        Cancel
      </ncbutton-stub>
      <ncbutton-stub alignment="center" size="normal" type="primary" nativetype="button" target="_self" variant="secondary" data-test-id="save-auth-method" disabled="true">
        Save
      </ncbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod completed form edit mode disabled user_oidc app should show error message and disabled sso button when oidc is selected 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method" iscomplete="true" haserror="true"></formheading-stub>
  <errornote-stub errortitle="This feature requires version {version} (or higher) of &quot;{app}&quot; app. Please install or update the app." errormessage="" errorlink="http://localhost/settings/apps/files/user_oidc" errorlinklabel="Install latest version now"></errornote-stub>
  <div class="auth-method">
    <div>
      <div class="auth-method--hint">
        <p class="title">
          Need help setting this up?
        </p>
        <p class="description">Please read our guide on {htmlLink}.</p>
      </div>
      <div class="auth-method--options">
        <nccheckboxradioswitch-stub id="oauth-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oidc" value="oauth2" class="radio-check">
          Two-way OAuth 2.0 authorization code flow
        </nccheckboxradioswitch-stub>
        <nccheckboxradioswitch-stub id="sso-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oidc" value="oidc" class="radio-check" disabled="true">
          Single-Sign-On through OpenID Connect Identity Provider
        </nccheckboxradioswitch-stub>
        <div class="info-container">
          <p>
            Requires an active Enterprise Corporate plan in OpenProject.
          </p>
          <errorlabel-stub error="This feature requires version {version} (or higher) of &quot;{app}&quot; app. Please install or update the app."></errorlabel-stub>
        </div>
      </div>
    </div>
    <div class="form-actions">
      <!---->
      <ncbutton-stub alignment="center" size="normal" type="secondary" nativetype="button" target="_self" variant="secondary" data-test-id="cancel-auth-method-edit" class="mr-2">
        Cancel
      </ncbutton-stub>
      <ncbutton-stub alignment="center" size="normal" type="primary" nativetype="button" target="_self" variant="secondary" data-test-id="save-auth-method" disabled="true">
        Save
      </ncbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod completed form edit mode should show form fields 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method" iscomplete="true"></formheading-stub>
  <!---->
  <div class="auth-method">
    <div>
      <div class="auth-method--hint">
        <p class="title">
          Need help setting this up?
        </p>
        <p class="description">Please read our guide on {htmlLink}.</p>
      </div>
      <div class="auth-method--options">
        <nccheckboxradioswitch-stub id="oauth-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oidc" value="oauth2" class="radio-check">
          Two-way OAuth 2.0 authorization code flow
        </nccheckboxradioswitch-stub>
        <nccheckboxradioswitch-stub id="sso-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oidc" value="oidc" class="radio-check">
          Single-Sign-On through OpenID Connect Identity Provider
        </nccheckboxradioswitch-stub>
        <div class="info-container">
          <p>
            Requires an active Enterprise Corporate plan in OpenProject.
          </p>
          <!---->
        </div>
      </div>
    </div>
    <div class="form-actions">
      <!---->
      <ncbutton-stub alignment="center" size="normal" type="secondary" nativetype="button" target="_self" variant="secondary" data-test-id="cancel-auth-method-edit" class="mr-2">
        Cancel
      </ncbutton-stub>
      <ncbutton-stub alignment="center" size="normal" type="primary" nativetype="button" target="_self" variant="secondary" data-test-id="save-auth-method" disabled="true">
        Save
      </ncbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod completed form edit mode unsupported user_oidc app should show disabled error message and disabled sso button when oauth2 is selected 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method" iscomplete="true"></formheading-stub>
  <!---->
  <div class="auth-method">
    <div>
      <div class="auth-method--hint">
        <p class="title">
          Need help setting this up?
        </p>
        <p class="description">Please read our guide on {htmlLink}.</p>
      </div>
      <div class="auth-method--options">
        <nccheckboxradioswitch-stub id="oauth-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oauth2" value="oauth2" class="radio-check">
          Two-way OAuth 2.0 authorization code flow
        </nccheckboxradioswitch-stub>
        <nccheckboxradioswitch-stub id="sso-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oauth2" value="oidc" disabled="true" class="radio-check">
          Single-Sign-On through OpenID Connect Identity Provider
        </nccheckboxradioswitch-stub>
        <div class="info-container">
          <p>
            Requires an active Enterprise Corporate plan in OpenProject.
          </p>
          <errorlabel-stub error="This feature requires version {version} (or higher) of &quot;{app}&quot; app. Please install or update the app." disabled="true"></errorlabel-stub>
        </div>
      </div>
    </div>
    <div class="form-actions">
      <!---->
      <ncbutton-stub alignment="center" size="normal" type="secondary" nativetype="button" target="_self" variant="secondary" data-test-id="cancel-auth-method-edit" class="mr-2">
        Cancel
      </ncbutton-stub>
      <ncbutton-stub alignment="center" size="normal" type="primary" nativetype="button" target="_self" variant="secondary" data-test-id="save-auth-method" disabled="true">
        Save
      </ncbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod completed form edit mode unsupported user_oidc app should show error message and disabled sso button when oidc is selected 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method" iscomplete="true" haserror="true"></formheading-stub>
  <errornote-stub errortitle="This feature requires version {version} (or higher) of &quot;{app}&quot; app. Please install or update the app." errormessage="" errorlink="http://localhost/settings/apps/files/user_oidc" errorlinklabel="Install latest version now"></errornote-stub>
  <div class="auth-method">
    <div>
      <div class="auth-method--hint">
        <p class="title">
          Need help setting this up?
        </p>
        <p class="description">Please read our guide on {htmlLink}.</p>
      </div>
      <div class="auth-method--options">
        <nccheckboxradioswitch-stub id="oauth-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oidc" value="oauth2" class="radio-check">
          Two-way OAuth 2.0 authorization code flow
        </nccheckboxradioswitch-stub>
        <nccheckboxradioswitch-stub id="sso-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oidc" value="oidc" class="radio-check" disabled="true">
          Single-Sign-On through OpenID Connect Identity Provider
        </nccheckboxradioswitch-stub>
        <div class="info-container">
          <p>
            Requires an active Enterprise Corporate plan in OpenProject.
          </p>
          <errorlabel-stub error="This feature requires version {version} (or higher) of &quot;{app}&quot; app. Please install or update the app."></errorlabel-stub>
        </div>
      </div>
    </div>
    <div class="form-actions">
      <!---->
      <ncbutton-stub alignment="center" size="normal" type="secondary" nativetype="button" target="_self" variant="secondary" data-test-id="cancel-auth-method-edit" class="mr-2">
        Cancel
      </ncbutton-stub>
      <ncbutton-stub alignment="center" size="normal" type="primary" nativetype="button" target="_self" variant="secondary" data-test-id="save-auth-method" disabled="true">
        Save
      </ncbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod completed form should show set form label in view mode 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method" iscomplete="true"></formheading-stub>
  <!---->
  <div class="auth-method">
    <p class="auth-method--label">
      Single-Sign-On through OpenID Connect Identity Provider
    </p>
    <div class="form-actions">
      <ncbutton-stub alignment="center" size="normal" type="secondary" nativetype="button" target="_self" variant="secondary" data-test-id="edit-auth-method">
        Edit authentication method
      </ncbutton-stub>
      <!---->
      <!---->
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod completed form view mode: disabled user_oidc app should not show form errors if setup with oauth 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method" iscomplete="true"></formheading-stub>
  <!---->
  <div class="auth-method">
    <p class="auth-method--label">
      Two-way OAuth 2.0 authorization code flow
    </p>
    <div class="form-actions">
      <ncbutton-stub alignment="center" size="normal" type="secondary" nativetype="button" target="_self" variant="secondary" data-test-id="edit-auth-method">
        Edit authentication method
      </ncbutton-stub>
      <!---->
      <!---->
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod completed form view mode: disabled user_oidc app should show form errors if setup with oidc 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method" iscomplete="true" haserror="true"></formheading-stub>
  <errornote-stub errortitle="This feature requires version {version} (or higher) of &quot;{app}&quot; app. Please install or update the app." errormessage="" errorlink="http://localhost/settings/apps/files/user_oidc" errorlinklabel="Install latest version now"></errornote-stub>
  <div class="auth-method">
    <p class="auth-method--label">
      Single-Sign-On through OpenID Connect Identity Provider
    </p>
    <div class="form-actions">
      <ncbutton-stub alignment="center" size="normal" type="secondary" nativetype="button" target="_self" variant="secondary" data-test-id="edit-auth-method">
        Edit authentication method
      </ncbutton-stub>
      <!---->
      <!---->
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod initial incomplete form current setting: authentication-method should save the setting on submit 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method" iscomplete="true"></formheading-stub>
  <!---->
  <div class="auth-method">
    <p class="auth-method--label">
      Single-Sign-On through OpenID Connect Identity Provider
    </p>
    <div class="form-actions">
      <ncbutton-stub alignment="center" size="normal" type="secondary" nativetype="button" target="_self" variant="secondary" data-test-id="edit-auth-method">
        Edit authentication method
      </ncbutton-stub>
      <!---->
      <!---->
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod initial incomplete form current setting: authentication-method should show error on save failure 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method"></formheading-stub>
  <!---->
  <div class="auth-method">
    <div>
      <div class="auth-method--hint">
        <p class="title">
          Need help setting this up?
        </p>
        <p class="description">Please read our guide on {htmlLink}.</p>
      </div>
      <div class="auth-method--options">
        <nccheckboxradioswitch-stub id="oauth-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oidc" value="oauth2" class="radio-check">
          Two-way OAuth 2.0 authorization code flow
        </nccheckboxradioswitch-stub>
        <nccheckboxradioswitch-stub id="sso-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oidc" value="oidc" class="radio-check">
          Single-Sign-On through OpenID Connect Identity Provider
        </nccheckboxradioswitch-stub>
        <div class="info-container">
          <p>
            Requires an active Enterprise Corporate plan in OpenProject.
          </p>
          <!---->
        </div>
      </div>
    </div>
    <div class="form-actions">
      <!---->
      <!---->
      <ncbutton-stub alignment="center" size="normal" type="primary" nativetype="button" target="_self" variant="secondary" data-test-id="save-auth-method">
        Save
      </ncbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod initial incomplete form current setting: authentication-method should show the required form fields 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method"></formheading-stub>
  <!---->
  <div class="auth-method">
    <div>
      <div class="auth-method--hint">
        <p class="title">
          Need help setting this up?
        </p>
        <p class="description">Please read our guide on {htmlLink}.</p>
      </div>
      <div class="auth-method--options">
        <nccheckboxradioswitch-stub id="oauth-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oauth2" value="oauth2" class="radio-check">
          Two-way OAuth 2.0 authorization code flow
        </nccheckboxradioswitch-stub>
        <nccheckboxradioswitch-stub id="sso-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oauth2" value="oidc" class="radio-check">
          Single-Sign-On through OpenID Connect Identity Provider
        </nccheckboxradioswitch-stub>
        <div class="info-container">
          <p>
            Requires an active Enterprise Corporate plan in OpenProject.
          </p>
          <!---->
        </div>
      </div>
    </div>
    <div class="form-actions">
      <!---->
      <!---->
      <ncbutton-stub alignment="center" size="normal" type="primary" nativetype="button" target="_self" variant="secondary" data-test-id="save-auth-method">
        Save
      </ncbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod initial incomplete form disabled user_oidc app should show disabled error message and disabled sso button 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method"></formheading-stub>
  <!---->
  <div class="auth-method">
    <div>
      <div class="auth-method--hint">
        <p class="title">
          Need help setting this up?
        </p>
        <p class="description">Please read our guide on {htmlLink}.</p>
      </div>
      <div class="auth-method--options">
        <nccheckboxradioswitch-stub id="oauth-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oauth2" value="oauth2" class="radio-check">
          Two-way OAuth 2.0 authorization code flow
        </nccheckboxradioswitch-stub>
        <nccheckboxradioswitch-stub id="sso-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oauth2" value="oidc" class="radio-check" disabled="true">
          Single-Sign-On through OpenID Connect Identity Provider
        </nccheckboxradioswitch-stub>
        <div class="info-container">
          <p>
            Requires an active Enterprise Corporate plan in OpenProject.
          </p>
          <errorlabel-stub error="This feature requires version {version} (or higher) of &quot;{app}&quot; app. Please install or update the app." disabled="true"></errorlabel-stub>
        </div>
      </div>
    </div>
    <div class="form-actions">
      <!---->
      <!---->
      <ncbutton-stub alignment="center" size="normal" type="primary" nativetype="button" target="_self" variant="secondary" data-test-id="save-auth-method">
        Save
      </ncbutton-stub>
    </div>
  </div>
</div>"
`;

exports[`Component: FormAuthMethod initial incomplete form server url not set should show form heading with disabled status 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method" isdisabled="true"></formheading-stub>
  <!---->
  <!---->
</div>"
`;

exports[`Component: FormAuthMethod initial incomplete form unsupported user_oidc app should show disabled error message and disabled sso button 1`] = `
"<div class="authentication-method">
  <formheading-stub index="2" title="Authentication method"></formheading-stub>
  <!---->
  <div class="auth-method">
    <div>
      <div class="auth-method--hint">
        <p class="title">
          Need help setting this up?
        </p>
        <p class="description">Please read our guide on {htmlLink}.</p>
      </div>
      <div class="auth-method--options">
        <nccheckboxradioswitch-stub id="oauth-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oauth2" value="oauth2" class="radio-check">
          Two-way OAuth 2.0 authorization code flow
        </nccheckboxradioswitch-stub>
        <nccheckboxradioswitch-stub id="sso-auth-method" arialabel="" type="radio" buttonvariantgrouped="no" checked="oauth2" value="oidc" class="radio-check" disabled="true">
          Single-Sign-On through OpenID Connect Identity Provider
        </nccheckboxradioswitch-stub>
        <div class="info-container">
          <p>
            Requires an active Enterprise Corporate plan in OpenProject.
          </p>
          <errorlabel-stub error="This feature requires version {version} (or higher) of &quot;{app}&quot; app. Please install or update the app." disabled="true"></errorlabel-stub>
        </div>
      </div>
    </div>
    <div class="form-actions">
      <!---->
      <!---->
      <ncbutton-stub alignment="center" size="normal" type="primary" nativetype="button" target="_self" variant="secondary" data-test-id="save-auth-method">
        Save
      </ncbutton-stub>
    </div>
  </div>
</div>"
`;
